tests/paczka1/fuzzy1/90577371.err
Error in line 10: PIfT2U A965 92,0
Error in line 16: Dtk A847 11,7
Error in line 25: PIfT2U S868 65,76
Error in line 22: aeNGuJ S247 34,9
Error in line 11: PIfT2U S868 49,7
Error in line 29: PIfT2U A847 15,9
Error in line 28: Dtk A965 205,6
